RavenDB-20941 Fix overflow issue on index page

--- a/src/Raven.Studio/wwwroot/Content/scss/_bs5extend.scss
+++ b/src/Raven.Studio/wwwroot/Content/scss/_bs5extend.scss
@@ -353,3 +353,10 @@ select {
 .cursor-pointer {
     cursor: pointer;
 }
+
+// index load error popover message
+.error-message {
+    max-height: 180px;
+    overflow-y: scroll;
+    position: relative;
+}
